@@ -1,3 +1,9 @@
+lod2repository (1.34))  lod2; urgency=low
+
+  * create the lod2final repository
+
+ -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Wed, 09 Jul 2014 12:32:37 +0200
+
 lod2repository (1.33) ldstack-nightly; urgency=low
 
   * add legacy virtuoso6 distribution
